# forward_kinematics

./: README.md  pyproject.toml  requirements.txt
src/fk/: __main__.py  utils.py
tests/: test_utils.py
